# pdb-from-scratch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: loopcount.c
pdbfs/: __init__.py  __main__.py  breakpoint.py  elf.py  tracer.py
tests/: test_breakpoint.py  test_elf.py  test_integration.py
