[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb-from-scratch"
version = "0.1.0"
description = "A debugger in pure Python. Sets breakpoints by writing 0xCC into another process's memory via ptrace."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kai Pfister" }]
keywords = ["debugger", "ptrace", "breakpoint", "elf", "from-scratch", "int3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Wasserpuncher/pdb-from-scratch"

[project.scripts]
pdbfs = "pdbfs.__main__:main"

[tool.setuptools.packages.find]
include = ["pdbfs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
